starter-code/styles.css
/* define variables for the primary colors */
:root {
    --purple-card: #D8A6FF;
    --yellow-card: #FF9E22;
    --coral-card: #FF8B6E;
    --background-dark: #12131A;
}

/* Font Import */
@font-face {
    font-family: 'DMSans-Bold';
    src: url(./assets/fonts/DM_Sans/static/DMSans-Bold.ttf);
    font-display: swap;
}

@font-face {
    font-family: 'DMSans-Regular';
    src: url(./assets/fonts/DM_Sans/static/DMSans-Regular.ttf);
    font-display: swap;
}

@font-face {
    font-family: 'DMSans-SemiBold';
    src: url(./assets/fonts/DM_Sans/static/DMSans-SemiBold.ttf);
    font-display: swap;
}


body {
    background-color: var(--background-dark);
    font-family: 'DMSans-Regular',sans-serif;
    color: #ffffff;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 800dvw;
    margin: 0 auto;
    padding: 0 1rem;
}

.body {
    margin: 1rem 1rem 3rem;
}

@media (min-width: 640px) {
    .body {
        margin: 3rem;
    }
}


@media (min-width: 768px) {
    .body {
        margin: 1rem 5rem 3rem;
    }
}

@media (min-width: 1024px) {
    .body {
        margin: 1rem 10rem 3rem;
    }
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2rem;
}

@media (min-width: 640px) {
    header {
        margin-bottom: 4rem;
    }
}

.logo {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.logo-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

.logo-text {
    font-size: 1.3rem;
}

.settings {
    background-color: #2A2B37;
    padding: 5px;
    border-radius: 5px;
}

/* Content */
.content {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.content-heading {
    text-align: center;
    margin-bottom: 1rem;
}

.heading {
    font-size: 2.5rem;
    line-height: 1.2;
}

.text-area {
    padding: 1.2rem;
    border-radius: 0.5rem;
    font-size: 1rem;
    line-height: 1.5;
    width: 100%;
    height: 200px;
    background-color: #2A2B37;
    color: #ffffff;
}

/* controls */
.controls {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

@media (min-width: 640px) {
    .controls {
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }
}

.checkboxes {
    display: flex;
    gap: 1rem;
    margin: 2rem;
}

.checkbox-label {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-size: 0.875rem;
    cursor: pointer;
}

.checkbox-label input[type='checkbox'] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
}
.checkbox-span {
    height: 1rem;
    width: 1rem;
    border-radius: 0.25rem;
    border: 1px solid #fbfbfb;
    display: inline-block;
    position: relative;
}

.reading-time {
font-size: 0.875;
color: #A5A5B3;
}

/* stats */
.stats-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1rem;
}

@media (min-width: 640px) {
    .stats-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 768px) {
    .stats-grid {
        grid-template-columns: repeat(3, 1fr);
    }
}
.stat-card {
    border-radius: 0.5rem;
    padding: 1.5rem;
    position: relative;
    overflow: hidden;
    color: #000000;
    height: 150px;
}

.purple{
    background-color: var(--purple-card);
}

.yellow{
    background-color: var(--yellow-card);
}

.coral {
    background-color: var(--coral-card);
}

.stat-img{
    position: absolute;
    top: 0;
    left: 26rem;
    right: 0;
    bottom: 0;
    opacity: 0.1rem;
    z-index: 1;
    pointer-events: none;
}

@media (min-width: 640px) {
    .stat-img {
        left: 15rem;
    }
}

@media (min-width: 768px) {
    .stat-img {
        left: 15rem;
    }
}

@media (min-width: 1024px) {
    .stat-img {
        left: 10rem;
    }
}


.stat-number {
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 0.75rem;
}

@media (min-width: 640px) {
    .stat-number {
        font-size: 3rem;
    }
}

.letter-density {
    margin-top: 1rem;
}
.density-title {
    font-size: 1.25rem;
    margin-bottom: 1rem;
}

@media (min-width: 640px) {
    .density-title {
        font-size: 1.5rem;
    }
}
.density-progress {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.bar {
    display: flex; 
    align-items: center;
    gap: 0.75rem;
    margin-bottom: 1rem;
}

.mybar {
    width: 100%;
    height: auto;
    background-color: #ffffff;
    overflow: hidden;
    border-radius: 50px;
}


.progress-fill {
    height: 2rem;
    background-color: var(--purple-card);
    border-radius: 50px;
}

.seemore-button {
    text-decoration: none;
    font-size: 1.2rem;
    color: #ffffff;
    margin-top: 1rem;
    display: inline-block;
}

